[gd_scene load_steps=5 format=3 uid="uid://btl5epxbkg53u"]

[ext_resource type="Script" path="res://scripts/system.gd" id="1_nfhrc"]
[ext_resource type="Texture2D" uid="uid://chm66j3eaqoc" path="res://assets/images/sprites/systemdot.png" id="1_vnrmu"]
[ext_resource type="Texture2D" uid="uid://dbwt8m3vocxgl" path="res://assets/images/sprites/systemring.png" id="2_61yhh"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mjshk"]
radius = 16.0312

[node name="System" type="Node2D"]
script = ExtResource("1_nfhrc")

[node name="sprite_dot" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_vnrmu")

[node name="sprite_ring" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_61yhh")

[node name="Label" type="Label" parent="."]
modulate = Color(1, 0, 0.0156863, 1)
offset_left = -14.0
offset_top = -12.0
offset_right = 14.0
offset_bottom = 14.0
size_flags_horizontal = 4
text = "000"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionCircle" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_mjshk")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
